--- a/src/pages/tailwind.css
+++ b/src/pages/tailwind.css
@@ -1,3 +1,12 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+body {
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
+}
+
+.small-caps {
+  font-variant-caps: all-small-caps;
+}
