feat: further dev on /release-notes

--- a/src/pages/tailwind.css
+++ b/src/pages/tailwind.css
@@ -18,12 +18,25 @@ body {
 
 .focus-outline:focus {
   outline: none;
-  box-shadow: 0 0 0 3px rgba(100, 149, 237, 0.25);
+  box-shadow: 0 0 0 3px rgba(100, 149, 237, 0.5);
 }
 
 /* Brand stuff */
 .logo {
   @apply text-indigo-600 italic text-3xl font-bold leading-none small-caps;
+}
+
+.logo::before {
+  content: "Faux!";
+}
+
+.header-stripe {
+  @apply pl-2 pr-4;
+  background-image: linear-gradient(120deg, #a3bffa, #7f9cf5);
+  background-repeat: no-repeat;
+  background-size: 100% 0.4em;
+  background-position: 0 80%;
+  line-height: 1em;
 }
 
 .btn {
@@ -67,6 +80,61 @@ body {
 .api-status::before {
   content: "";
   @apply w-2 h-2 bg-green-200 bg-green-500 rounded-full mr-2;
+}
+
+/* Changelog -- */
+.changelog-tag::before {
+  @apply px-3 mb-2 small-caps rounded-md text-lg inline-block text-white;
+}
+
+@screen md {
+  .changelog-tag::before {
+    @apply absolute;
+    background-color: rgb(217, 235, 254);
+    color: rgb(66, 86, 171);
+  }
+}
+
+.cl-features::before {
+  /* background-color: rgb(217, 235, 254);
+  color: rgb(66, 86, 171); */
+  content: "features";
+}
+
+.cl-fixes::before {
+  /* background-color: rgb(249, 227, 222);
+  color: rgb(152, 55, 82); */
+  content: "fixes";
+}
+
+.cl-enhancements::before {
+  /* background-color: rgb(211, 239, 201);
+  color: rgb(43, 94, 68); */
+  content: "enhancements";
+}
+
+.cl-performance::before {
+  /* background-color: rgb(245, 228, 187);
+  color: rgb(143, 65, 27); */
+  content: "performance";
+}
+
+@screen md {
+  .cl-features::before {
+    margin-left: -111px;
+  }
+
+  .cl-fixes::before {
+    margin-left: -79px;
+  }
+
+  .cl-enhancements::before {
+    margin-left: -158px;
+  }
+
+  .cl-performance::before {
+    margin-left: -147px;
+  }
 }
 
 @tailwind utilities;
