feat: add ccordion component

--- a/src/pages/tailwind.css
+++ b/src/pages/tailwind.css
@@ -1,6 +1,10 @@
 @tailwind base;
 @tailwind components;
 
+html {
+  /* scroll-behavior: smooth; */
+}
+
 body {
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
