consolidate common styles

--- a/src/components/templates/Post.module.css
+++ b/src/components/templates/Post.module.css
@@ -1,6 +1,6 @@
 /* Post -- text styles */
 .article {
-  @apply text-gray-800 text-lg leading-relaxed;
+  @apply text-lg leading-relaxed;
 }
 
 .article p,
