--- a/src/pages/tailwind.css
+++ b/src/pages/tailwind.css
@@ -103,6 +103,11 @@ body {
 }
 
 /* Component specific classes, could just be inline styles? */
+/* Nav -- */
+.mobile-toggle span {
+  @apply block w-full h-1 bg-indigo-600 rounded-lg transition-all ease-in-out duration-200;
+}
+
 /* Footer -- */
 .api-status {
   @apply inline-flex items-center;
