--- a/src/pages/tailwind.css
+++ b/src/pages/tailwind.css
@@ -108,6 +108,10 @@ body {
   @apply block w-full h-1 bg-indigo-600 rounded-lg transition-all ease-in-out duration-200;
 }
 
+.mobile-menu li {
+  @apply block;
+}
+
 /* Footer -- */
 .api-status {
   @apply inline-flex items-center;
