--- a/src/components/templates/Post.module.css
+++ b/src/components/templates/Post.module.css
@@ -10,6 +10,10 @@
   @apply mb-8;
 }
 
+.artlce li p {
+  @apply mb-4
+}
+
 .article h2 {
   @apply font-semibold text-3xl mt-12 mb-4 leading-snug;
 }
