set global line-height

--- a/src/pages/tailwind.css
+++ b/src/pages/tailwind.css
@@ -6,7 +6,7 @@ html {
 }
 
 body {
-  @apply font-sans text-gray-800 antialiased;
+  @apply font-sans text-gray-800 antialiased leading-normal;
 }
 
 ::selection {
