--- a/src/pages/tailwind.css
+++ b/src/pages/tailwind.css
@@ -6,7 +6,7 @@ html {
 }
 
 body {
-  @apply font-sans text-gray-800 antialiased leading-normal;
+  @apply font-sans antialiased leading-normal text-gray-800;
 }
 
 ::selection {
@@ -16,6 +16,7 @@ body {
 /* Some utils Tailwind didn't have */
 .small-caps {
   font-variant-caps: all-small-caps;
+  /* font-size: 1.2em; */
 }
 
 /* Bulldozing browser default outlines */
@@ -30,7 +31,7 @@ body {
 
 /* Brand stuff */
 .logo {
-  @apply text-indigo-600 italic text-3xl font-bold leading-none small-caps;
+  @apply text-3xl italic font-bold leading-none text-indigo-600 small-caps;
 }
 
 .logo::before {
@@ -71,7 +72,7 @@ body {
 }
 
 .btn {
-  @apply inline-block rounded cursor-pointer py-1 px-4 text-xl small-caps shadow transition ease-in duration-100 focus-outline;
+  @apply inline-block px-4 py-1 text-xl transition duration-100 ease-in rounded shadow cursor-pointer small-caps focus-outline;
 }
 
 .btn:hover {
@@ -79,7 +80,7 @@ body {
 }
 
 .btn-primary {
-  @apply btn text-white bg-indigo-500;
+  @apply text-white bg-indigo-500 btn;
 }
 
 .btn-primary:hover {
@@ -91,7 +92,7 @@ body {
 }
 
 .btn-secondary {
-  @apply btn text-indigo-500 bg-white;
+  @apply text-indigo-500 bg-white btn;
 }
 
 .btn-secondary:hover {
@@ -105,7 +106,7 @@ body {
 /* Component specific classes, could just be inline styles? */
 /* Nav -- */
 .mobile-toggle span {
-  @apply block w-full h-1 bg-indigo-600 rounded-lg transition-all ease-in-out duration-200;
+  @apply block w-full h-1 transition-all duration-200 ease-in-out bg-indigo-600 rounded-lg;
 }
 
 .mobile-menu li {
@@ -119,16 +120,16 @@ body {
 
 .api-status::before {
   content: "";
-  @apply w-2 h-2 bg-green-200 bg-green-500 rounded-full mr-2;
+  @apply w-2 h-2 mr-2 bg-green-200 bg-green-500 rounded-full;
 }
 
 /* Release-Notes -- */
 .release-note ul {
-  @apply list-disc pl-6;
+  @apply pl-6 list-disc;
 }
 
 .release-note li {
-  @apply mb-2 pl-3 leading-normal;
+  @apply pl-3 mb-2 leading-normal;
 }
 
 /* Post -- */
