--- a/src/components/templates/Post.module.css
+++ b/src/components/templates/Post.module.css
@@ -11,13 +11,23 @@
 }
 
 .artlce li p {
-  @apply mb-4
+  @apply mb-4;
+}
+
+.article h2,
+.article h3,
+.article h4 {
+  @apply font-semibold leading-snug;
 }
 
 .article h2 {
-  @apply font-semibold text-3xl mt-12 mb-4 leading-snug;
+  @apply mt-12 mb-4 text-3xl;
 }
 
 .article h3 {
-  @apply font-semibold text-2xl mt-8 mb-4 leading-snug;
+  @apply mt-8 mb-4 text-2xl;
+}
+
+.article h4 {
+  @apply mt-4 mb-2 text-xl;
 }
